--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.turn.availableTurns.AvailableTurnsActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true">
             <intent-filter>
@@ -24,9 +28,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
+            android:exported="false">
+
+        </activity>
     </application>
 
 </manifest>
